--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "Joe Stephen",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1",
     "sequelize-typescript": "^2.1.6",
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.25",
     "nodemon": "^3.1.0"
   }
