--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
+    "@types/otp-generator": "^4.0.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -19,6 +21,8 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.12",
+    "otp-generator": "^4.0.1",
     "sequelize": "^6.37.1",
     "sequelize-typescript": "^2.1.6",
     "ts-node": "^10.9.2"
