--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -25,13 +27,16 @@
     "otp-generator": "^4.0.1",
     "sequelize": "^6.37.1",
     "sequelize-typescript": "^2.1.6",
-    "ts-node": "^10.9.2"
+    "socket.io": "^4.7.5",
+    "ts-node": "^10.9.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.25",
+    "@types/ws": "^8.5.10",
     "nodemon": "^3.1.0"
   }
 }
